--- a/Experience.html
+++ b/Experience.html
@@ -76,13 +76,24 @@
          </div>  -->
 
       </div> 
-      <section id="portfolio">
 
+      <h1 class="text-center" style="color: black;">COMPANY</h1><br>
+      <div class="text-center">
+         <img src="images/splace.jpeg" alt=""><br>
+         <img src="images/splace logo.png" alt=""><br><br>
+      <p> 2nd floor Sartorio Bldg. KM 9 McArthur Hwy Barangay Bago Aplaya, Puan, Talomo, Davao City, Philippines, 8000</p>
+      <p>Contact: Mr. Harold Rey P. Ladaran, +1 503-488-3540</p>
+      </div>
+      <br>
+      <h1 class="text-center" style="color: black;">GALLERY</h1> <br>
+      <section id="portfolio">
          <div class="row">
    
             <div class="twelve columns collapsed">
-   
-               <h1 style="color: black;">Gallery</h1>
+              
+               <!-- portfolio-wrapper -->
+               <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+             
    
                <!-- portfolio-wrapper -->
                <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
